apollo-federation/src/sources/connect/validation/snapshots/validation_tests@batch__batch_alias_happy_path.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/batch/batch_alias_happy_path.graphql
---
[]
