apollo-federation/src/sources/connect/validation/snapshots/validation_tests@batch__batch_incorrect_context_key.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/batch/batch_incorrect_context_key.graphql
---
[
    Message {
        code: ConnectBatchAndThis,
        message: "Batch keys cannot be mapped from non-`$root` sources (i.e. `$context`, `$this`).",
        locations: [],
    },
]
